# SatisfactorySolver

./: .gitignore  LICENSE.txt  README.md  additional_data.json  cvc5_model.py  duo reversed.sfmd  duo.sfmd  game_data.json  helpers.py  instant scrap 1.sfmd  instant scrap 10.sfmd  instant scrap 11.sfmd  instant scrap_inf.sfmd  main.py  modeler_models.py  pyomo_model.py  pyproject.toml  rocket fuel factory.sfmd  rocket fuel without loops.sfmd  simple coal generator.sfmd  simple pure ingot.sfmd  simple rocket fuel.sfmd  solver_helpers.py  solver_model.py  solver_models.py  z3_model.py
satisfactorysolver/: cvc5_model.py  helpers.py  modeler_models.py  optimal_chain_finder.py  pyomo_model.py  pyomo_optimal_chain_finder.py  smt_model.py  solver_helpers.py  solver_model.py  z3_model.py  z3_optimal_chain_finder.py
