[tool.poetry]
name = "satisfactorysolver"
version = "0.1.0"
description = ""
authors = ["Daniel Berlin <dberlin@dberlin.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyomo = "^6.8.2"
rich = "^13.9.4"
highspy = "^1.9.0"
pydantic = "^2.10.4"
deepmerge = "^2.0"
networkx = "^3.4.2"
matplotlib = "^3.10.0"
setuptools = "^75.6.0"
wheel = "^0.45.1"
pybind11 = "^2.13.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
